# WES-2024

./: .c-template  .gitignore  .h-template  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/accelerometer/: CMakeLists.txt  accelerometer.c  accelerometer.h
components/button/: CMakeLists.txt  button.c  button.h
components/gui/: CMakeLists.txt  app.c  app.h  gui.c  gui_app.c
components/gui/inc/: btnqueue.h  coms.h  tictac.h
components/gui/squareline/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
components/gui/squareline/components/: ui_comp.c  ui_comp.h  ui_comp_background1.c  ui_comp_background1.h  ui_comp_hook.c  ui_comp_hook.h
components/gui/squareline/images/: ui_img_bg_space1_png.c  ui_img_dashboard3_png.c  ui_img_logo2_png.c  ui_img_logo3_png.c  ui_img_logo4_png.c  ui_img_o_icon3_png.c  ui_img_x_icon2_png.c
components/gui/squareline/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_Screen4.c
components/gui/src/: btnqueue.c  coms.c  tictac.c
components/i2c/: i2c.c  i2c.h
components/joy/: CMakeLists.txt  joy.c  joy.h
components/led_pwm/: CMakeLists.txt  led_pwm.c  led_pwm.h  tempCodeRunnerFile.h
components/mqtt_driver/: CMakeLists.txt  mqtt_driver.c  mqtt_driver.h
components/wifi/: CMakeLists.txt  wifi.c  wifi.h
main/: app_main.c
